# TallerDockerfile-ComposeyPruebasContenedores

./: .coverage  Dockerfile  README.md  detallesaplicativoparcial.md  docker-compose.yml  locustfile.py  parcial2.md  pyproject.toml  recargas.db  requirements.txt  tallerockercompose.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml
src/: api.py  db.py  models.py  recarga_repository.py
test/: test_api.py  test_recarga.py
tests/integration/: conftest.py  test_recarga_repository.py
tests/system/: test_recarga_system.py
