[project]
name = "recargayaparcial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "behave>=1.3.3",
    "fastapi>=0.136.3",
    "flask>=3.1.3",
    "locust>=2.44.1",
    "pytest>=9.0.3",
    "pytest-bdd>=8.1.0",
    "pytest-cov>=7.1.0",
    "uvicorn[standard]>=0.34.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "locust>=2.44.1",
    "httpx2>=0.26.0",
]
